<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <!--
        FengYu 4.0.0 — true parent POM (was a bare aggregator before).
        Centralises version properties, dependencyManagement, and pluginManagement
        so the API and app modules inherit a single source of truth.
    -->
    <groupId>fan.summer.fengyu</groupId>
    <artifactId>FengYu-parent</artifactId>
    <version>${revision}</version>
    <packaging>pom</packaging>

    <name>FengYu Parent</name>
    <description>FengYu — a modular desktop toolbox. Multi-module parent / reactor.</description>

    <licenses>
        <license>
            <name>GNU General Public License v3.0</name>
            <url>https://www.gnu.org/licenses/gpl-3.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <properties>
        <!-- Single source of truth for the project version. Child modules reference
             the parent via <parent><version>${revision}</version></parent>. -->
        <revision>4.0.0-rc.1</revision>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>

        <!-- Repository-wide build versions consumed by the host and same-repository
             official plugin modules. dependencyManagement selects build versions only; it
             does not mean the FengYu host provides these libraries to isolated Workers. -->
        <lombok.version>1.18.48</lombok.version>
        <!-- The Plugin Worker SDK is independently versioned (1.1.0) and published
             to GitHub Packages for external plugin developers. It stays in the
             reactor so local builds install it without a token. 1.2.0 adds a
             parent-death watchdog (stdin EOF + parent-process liveness) to the
             worker run() entry point so workers never outlive their host.
             1.1.0 added the RpcTransport abstraction (StdioTransport + the
             socket-transport contract fengyu-plugin-devkit implements), so the same
             dispatch loop serves production stdio and IDE loopback-TCP debugging. -->
        <fengyu.plugin.sdk.version>2.1.0</fengyu.plugin.sdk.version>
        <fesod.version>2.0.2-incubating</fesod.version>
        <h2.version>2.4.240</h2.version>
        <simplejavamail.version>8.12.6</simplejavamail.version>
        <angusmail.version>2.0.5</angusmail.version>
        <!-- Aligned with Spring Boot 4.1's managed logback (classic + core must match;
             a split classic/core pair triggers NoClassDefFound on internal classes
             like JaninoEventEvaluatorBase). -->
        <logback.version>1.5.38</logback.version>
        <slf4j.version>2.0.19</slf4j.version>
        <gson.version>2.14.0</gson.version>
        <jackson.version>2.21.6</jackson.version>
        <jsoup.version>1.23.2</jsoup.version>
        <commonmark.version>0.24.0</commonmark.version>
        <pdfbox.version>3.0.8</pdfbox.version>
        <poi.version>5.5.1</poi.version>
        <!-- Database drivers for multi-datasource support (Phase 4) -->
        <mysql.version>9.7.0</mysql.version>
        <postgresql.version>42.7.13</postgresql.version>
        <sqlite.version>3.53.4.0</sqlite.version>
        <mybatis.version>3.5.19</mybatis.version>
        <greenmail.version>2.1.13</greenmail.version>
        <!-- Spring Boot 4 (embedded, non-web) + Spring AI 2.0 — Phase 1 AI strangler.
             The BOM imports live in the FengYu module POM (import-scoped BOMs in a
             parent do not reliably propagate managed versions to children), but the
             version pins stay here as the single source of truth. -->
        <spring-boot.version>4.1.1</spring-boot.version>
        <spring-framework.version>7.0.9</spring-framework.version>
        <spring-ai.version>2.0.1</spring-ai.version>

        <!-- Plugin versions -->
        <maven.compiler.plugin.version>3.16.0</maven.compiler.plugin.version>
        <maven.surefire.plugin.version>3.6.0</maven.surefire.plugin.version>
        <maven.shade.plugin.version>3.6.2</maven.shade.plugin.version>
        <launch4j.maven.plugin.version>2.7.0</launch4j.maven.plugin.version>
    </properties>

    <!-- Reactor modules. -->
    <modules>
        <module>toolchain/sdk-java</module>
        <module>toolchain/devkit-java</module>
        <module>OfficialPlugins</module>
        <module>FengYu</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <!-- Other libs -->
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.fesod</groupId>
                <artifactId>fesod-sheet</artifactId>
                <version>${fesod.version}</version>
            </dependency>
            <dependency>
                <groupId>com.h2database</groupId>
                <artifactId>h2</artifactId>
                <version>${h2.version}</version>
            </dependency>
            <!-- Multi-datasource drivers (Phase 4) -->
            <dependency>
                <groupId>com.mysql</groupId>
                <artifactId>mysql-connector-j</artifactId>
                <version>${mysql.version}</version>
            </dependency>
            <dependency>
                <groupId>org.postgresql</groupId>
                <artifactId>postgresql</artifactId>
                <version>${postgresql.version}</version>
            </dependency>
            <dependency>
                <groupId>org.xerial</groupId>
                <artifactId>sqlite-jdbc</artifactId>
                <version>${sqlite.version}</version>
            </dependency>
            <dependency>
                <groupId>org.mybatis</groupId>
                <artifactId>mybatis</artifactId>
                <version>${mybatis.version}</version>
            </dependency>
            <dependency>
                <groupId>com.icegreen</groupId>
                <artifactId>greenmail-junit5</artifactId>
                <version>${greenmail.version}</version>
            </dependency>
            <dependency>
                <groupId>org.simplejavamail</groupId>
                <artifactId>simple-java-mail</artifactId>
                <version>${simplejavamail.version}</version>
            </dependency>
            <dependency>
                <groupId>org.eclipse.angus</groupId>
                <artifactId>angus-mail</artifactId>
                <version>${angusmail.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.code.gson</groupId>
                <artifactId>gson</artifactId>
                <version>${gson.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-databind</artifactId>
                <version>${jackson.version}</version>
            </dependency>
            <dependency>
                <groupId>org.jsoup</groupId>
                <artifactId>jsoup</artifactId>
                <version>${jsoup.version}</version>
            </dependency>
            <dependency>
                <groupId>fan.summer.fengyu.sdk</groupId>
                <artifactId>fengyu-plugin-sdk</artifactId>
                <version>${fengyu.plugin.sdk.version}</version>
            </dependency>
            <dependency>
                <groupId>org.commonmark</groupId>
                <artifactId>commonmark</artifactId>
                <version>${commonmark.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.pdfbox</groupId>
                <artifactId>pdfbox</artifactId>
                <version>${pdfbox.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.poi</groupId>
                <artifactId>poi-ooxml</artifactId>
                <version>${poi.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-context</artifactId>
                <version>${spring-framework.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.ai</groupId>
                <artifactId>spring-ai-model</artifactId>
                <version>${spring-ai.version}</version>
            </dependency>
            <!-- Spring Boot starter + Spring AI artifacts: versions supplied by the imported BOMs above. -->
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>${slf4j.version}</version>
            </dependency>
            <dependency>
                <groupId>ch.qos.logback</groupId>
                <artifactId>logback-classic</artifactId>
                <version>${logback.version}</version>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter</artifactId>
                <version>5.10.2</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven.compiler.plugin.version}</version>
                    <configuration>
                        <source>${maven.compiler.source}</source>
                        <target>${maven.compiler.target}</target>
                        <encoding>UTF-8</encoding>
                        <annotationProcessorPaths>
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                                <version>${lombok.version}</version>
                            </path>
                        </annotationProcessorPaths>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${maven.surefire.plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-shade-plugin</artifactId>
                    <version>${maven.shade.plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>com.akathist.maven.plugins.launch4j</groupId>
                    <artifactId>launch4j-maven-plugin</artifactId>
                    <version>${launch4j.maven.plugin.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

</project>
